--- a/src/assets/gameConfig.json
+++ b/src/assets/gameConfig.json
@@ -1,3 +1,5 @@
 {
-	"dataServerUrl":"https://apistaging.dinomao.com/"
+	"dataServerUrl":"https://apistaging.dinomao.com/",
+	"wsUrl":"wss://controllerstaging.dinomao.com/",
+	"fileServerUrl":"https://staging.dinomao.com/"
 }
