--- a/angular.json
+++ b/angular.json
@@ -32,10 +32,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-              "src/firebase/firebase-app.js",
-              "src/firebase/firebase-analytics.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
